--- a/HW_1/HW_1.ipynb
+++ b/HW_1/HW_1.ipynb
@@ -4,51 +4,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####1"
+    "### Задание 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ima = np.array([1, 6],\n",
-    "             [2, 8],\n",
-    "             [3, 11],\n",
-    "             [3, 10],\n",
-    "             [1, 7])port numpy as np"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  6]\n",
+      " [ 2  8]\n",
+      " [ 3 11]\n",
+      " [ 3 10]\n",
+      " [ 1  7]]\n"
+     ]
+    }
+   ],
    "source": [
-    "a = np.array([1, 6],\n",
-    "             [2, 8],\n",
-    "             [3, 11],\n",
-    "             [3, 10],\n",
-    "             [1, 7])"
+    "a = np.array([[1, 2, 3, 3, 1],\n",
+    "             [6, 8, 11, 10, 7]]).transpose()\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.  8.4]\n"
+     ]
+    }
+   ],
    "source": [
-    "np.mean (a, axis = 1)\n",
-    "array([1. , 2. , 3. , 3. , 1. ])"
+    "mean_a = np.mean(a, axis = 0)\n",
+    "print(mean_a)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
