--- a/HW_1/HW_1.ipynb
+++ b/HW_1/HW_1.ipynb
@@ -18,44 +18,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1  6]\n",
-      " [ 2  8]\n",
-      " [ 3 11]\n",
-      " [ 3 10]\n",
-      " [ 1  7]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([2. , 8.4])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "a = np.array([[1, 2, 3, 3, 1],\n",
     "             [6, 8, 11, 10, 7]]).transpose()\n",
-    "print(a)"
+    "mean_a = np.mean(a, axis = 0)\n",
+    "mean_a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задание 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.  8.4]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[-1. , -2.4],\n",
+       "       [ 0. , -0.4],\n",
+       "       [ 1. ,  2.6],\n",
+       "       [ 1. ,  1.6],\n",
+       "       [-1. , -1.4]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_a = np.mean(a, axis = 0)\n",
-    "print(mean_a)"
+    "a_centered = a - mean_a\n",
+    "a_centered"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задание 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
